Fix styles and spacing for message container items

--- a/app/assets/stylesheets/base/colors.scss
+++ b/app/assets/stylesheets/base/colors.scss
@@ -8,6 +8,8 @@ $white-opaque: rgba($white, 0.6);
 $light-green: #43b581;
 $body-text-grey: #99aab5;
 $channels-grey: #8e9297;
+$message-header-grey: hsla(0,0%,100%,.2);
+$message-body-white: #dcddde;
 
 // Background colors
 $black: #202225;
