--- a/app/assets/stylesheets/components/_channel_detail.scss
+++ b/app/assets/stylesheets/components/_channel_detail.scss
@@ -37,6 +37,29 @@
 
   // overflow: scroll;
   overflow-y: scroll;
+  scrollbar-color:red yellow;
+}
+
+::-webkit-scrollbar {
+    height: 2px;
+    width: 8px;
+    background: #000;
+}
+
+::-webkit-scrollbar {
+    height: 12px;
+    width: 12px;
+    background: #000;
+}
+
+::-webkit-scrollbar-thumb {
+    background: $border-hover-darkgrey;
+    -webkit-border-radius: 1ex;
+    -webkit-box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.75);
+}
+
+::-webkit-scrollbar-corner {
+    background: #000;
 }
 
 .channel-welcomeMessage {
@@ -67,8 +90,66 @@
   flex-direction: column;
 }
 
-.messageIndexItemContainer > * {
+// .messageIndexItemContainer > * {
+//   margin-left: 8px;
+// }
+
+.messageIndexItem {
+  margin-bottom: 4px;
+}
+
+.messageHeader {
+  display: flex;
+  align-items: flex-start;
+  height: 20px;
+}
+
+.messageHeader > .userAvatar {
+  margin: -2px 20px 20px;
+  opacity: 1;
+}
+
+.userAvatar-wrapper {
+  background-color: white;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  opacity: 1;
+  
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.messageHeader-details {
+  color: $message-header-grey;
+}
+
+.messageHeader-details > .username {
+  font-size: 16px;
+  font-weight: $regular-bold;
+  color: $white;
+  cursor: pointer;
+}
+
+.messageHeader-details > .username:hover {
+  text-decoration: underline;
+}
+
+.messageHeader-details > time {
+  font-size: 12px;
+  font-weight: $regular;
   margin-left: 8px;
+}
+
+.messageContent {
+  margin-left: 80px;
+  padding-right: 10px;
+
+  color: $message-body-white;
+  font-size: 15px;
+  white-space: pre-wrap;
+  overflow-wrap: break-word;
 }
 
 // ChannelMessageForm inside ChannelDetail 
